去掉页面动画效果

--- a/app/views/admin/index.html
+++ b/app/views/admin/index.html
@@ -4,8 +4,8 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Blank</h1>
-            {{.session.Id}}
+            <h1 class="page-header">Welcome</h1>
+            <h3>{{.session.Items.loginName}} 欢迎登陆</h3>
         </div>
         <!-- /.col-lg-12 -->
     </div>
