--- a/app/views/blog/showPost.html
+++ b/app/views/blog/showPost.html
@@ -93,6 +93,7 @@
 									</article>
 
 									<div class="comments-wrap">
+										<a name="comments"></a>
 										<h4>{{.post.CommentCount}} Comments</h4>
 										<ul>
 
@@ -144,7 +145,6 @@
 <script src="/public/js/jquery-1.11.0.js"></script>
 <script src="/public/js/bootstrap.js"></script>
 <script src="/public/js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="/public/js/animations.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 
