--- a/app/views/admin/editPost.html
+++ b/app/views/admin/editPost.html
@@ -6,7 +6,7 @@
 <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">Forms</h1>
+                    <h1 class="page-header">编辑文章</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -18,7 +18,6 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            Basic Form Elements
                         </div>
                         <div class="panel-body">
                             <div class="row">
