--- a/app/views/blog/showPost.html
+++ b/app/views/blog/showPost.html
@@ -70,7 +70,7 @@
 								<div class="page-head">
 									<div class="row">
 										<div class="col-md-5">
-											<h3>Blog</h3>
+											<h3><a href="/">Blog</a></h3>
 										</div>
 										<div class="col-md-7">
 										</div>
