deleted target file

--- a/app/views/blog/footer.html
+++ b/app/views/blog/footer.html
@@ -1,7 +1,7 @@
 <footer>
 	<div class="row">
 		<div class="col-md-7">
-			<p>&copy; 2014 Robb Armstrong. All Rights Reserved</p>
+			<p>&copy; 2020 Blogo. All Rights Reserved</p>
 		</div>
 		<div class="col-md-5">
 			<ul class="social">
