rewrite with echo web framework

--- a/app/views/blog/navigation.html
+++ b/app/views/blog/navigation.html
@@ -1,3 +1,4 @@
+{{define "blog/navigation.html"}}
 <div class="profile-pic">
 	<div class="pic-bg"><img src="/public/images/profile-avatar.png" class="img-responsive" alt=""/></div>
 </div>
@@ -10,3 +11,4 @@
 	<li><a href="/about">About <i class="fa fa-envelope"></i></a></li>
 </ul>
 </nav>
+{{end}}
