--- a/app/views/blog/showPost.html
+++ b/app/views/blog/showPost.html
@@ -87,7 +87,7 @@
 													<i class="fa fa-user"></i> <a href="#">Admin</a> 
 													<i class="fa fa-comments"></i> <a href="#">{{.post.CommentCount}} Comments</a> 
 												</div>
-												<p>{{raw .post.Content}}</p>
+												<p>{{.post.Content}}</p>
 											</div>
 										</div>
 									</article>
