--- a/app/views/admin/flash.html
+++ b/app/views/admin/flash.html
@@ -1,3 +1,4 @@
+{{define "admin/flash.html"}}
 {{if .flash.success}}
 <div class="alert alert-success alert-dismissable">
     <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -17,4 +18,5 @@
 		{{end}}
 	</ul>
 </div>
+{{end}}
 {{end}}
