--- a/app/views/admin/header.html
+++ b/app/views/admin/header.html
@@ -1,3 +1,4 @@
+{{define "admin/header.html"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,3 +62,4 @@
     <div id="wrapper">
 
         {{template "admin/navigation.html" .}}
+{{end}}
