--- a/app/views/admin/navigation.html
+++ b/app/views/admin/navigation.html
@@ -1,4 +1,4 @@
-
+{{define "admin/navigation.html"}}
 <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -63,3 +63,4 @@
             </div>
             <!-- /.navbar-static-side -->
         </nav>
+{{end}}
