--- a/views/admin/navigation.html
+++ b/views/admin/navigation.html
@@ -8,7 +8,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/admin/index">Blogo v1.0</a>
+                <a class="navbar-brand" href="/admin/home">Blogo v2.0</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -45,7 +45,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="/admin/index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="/admin/home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="/admin/posts"><i class="fa fa-edit fa-fw"></i> 文章管理</a>
