--- a/views/blog/footer.html
+++ b/views/blog/footer.html
@@ -1,7 +1,8 @@
+{{define "blog/footer.html"}}
 <footer>
 	<div class="row">
 		<div class="col-md-7">
-			<p>&copy; 2020 Blogo. All Rights Reserved</p>
+			<p>&copy; 2021 Blogo. All Rights Reserved</p>
 		</div>
 		<div class="col-md-5">
 			<ul class="social">
@@ -13,3 +14,4 @@
 		</div>
 	</div>
 </footer>
+{{end}}
