--- a/views/admin/editPost.html
+++ b/views/admin/editPost.html
@@ -6,7 +6,7 @@
 <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">编辑文章</h1>
+                    <h1 class="page-header">{{.title}}</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
