--- a/views/admin/home.html
+++ b/views/admin/home.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Welcome</h1>
-            <h3>{{.session}} 欢迎登陆</h3>
+            <h3>{{ .session.loginName }} 欢迎登陆</h3>
         </div>
         <!-- /.col-lg-12 -->
     </div>
