--- a/views/admin/editPost.html
+++ b/views/admin/editPost.html
@@ -23,24 +23,24 @@
                             <div class="row">
                                 <div class="col-lg-8">
                                     <form role="form" action="/admin/post/save" method="POST">
-                                        <input type="hidden" name="post.Id" value="{{.post.Id}}">
+                                        <input type="hidden" name="id" value="{{.post.Id}}">
                                         <div class="form-group">
                                             <label>访问Slug：</label>
-                                            <input class="form-control" name="post.Slug" value="{{.post.Slug}}">
+                                            <input class="form-control" name="slug" value="{{.post.Slug}}">
                                         </div>
                                         <div class="form-group">
                                             <label>标题：</label>
-                                            <input class="form-control" name="post.Title" value="{{.post.Title}}">
+                                            <input class="form-control" name="title" value="{{.post.Title}}">
                                         </div>
                                         <div class="form-group">
                                             <label>内容：</label>
-                                            <textarea class="form-control ckeditor" name="post.Content">
+                                            <textarea class="form-control ckeditor" name="content">
                                                 {{.post.Content}}
                                             </textarea>
                                         </div>
                                         <div class="form-group">
                                             <label>Tags：</label>
-                                            <input class="form-control" placeholder="多个请使用,分隔" name="post.Tags" value="{{.post.Tags}}">
+                                            <input class="form-control" placeholder="多个请使用,分隔" name="tags" value="{{.post.Tags}}">
                                         </div>
                                         <button type="submit" class="btn btn-default">提交表单</button>
                                         <button type="reset" class="btn btn-default">重置</button>
